--- a/my-react-app/index.html
+++ b/my-react-app/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- Favicon icons -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons8-d-ios-17-filled-16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons8-d-ios-17-filled-32.png" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/icons8-d-ios-17-filled-57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="/icons8-d-ios-17-filled-60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="/icons8-d-ios-17-filled-72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="/icons8-d-ios-17-filled-76.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="/icons8-d-ios-17-filled-96.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DzhanRafetov</title>
   </head>
